@@ -3,6 +3,6 @@ $aUriAliases = array(
     'seagull-php-framework' => 'default/default',
 	'contact-seagull-php-framework' => 'contactus',
 	'content-reshuffle-alias' => 'publisher/articleview/frmArticleID/1/staticId/6',
-	'static-article' => 'publisher/articleview/frmArticleID/1',
+	'any_alias_you_want' => 'publisher/articleview/frmArticleID/1/staticId/6',
     );
 ?>
