@@ -9,7 +9,11 @@
 <br /><br />
 {end:}
 
-<p>Welcome to the <strong>Seagull Framework</strong> project. Seagull is an OO <a href="http://php.net" title="PHP"><acronym title="PHP: Hypertext Preprocessor">PHP</acronym></a> framework, with core components <acronym title="Berkeley Software Distribution">BSD</acronym> licensed, that has the following design goals:</p>
+<p>
+Welcome to the <strong>Seagull Framework</strong> project. Seagull is an
+OO <a href="http://php.net" title="PHP"><acronym title="PHP: Hypertext Preprocessor">PHP</acronym></a>
+framework, with core components <acronym title="Berkeley Software Distribution">BSD</acronym> licensed,
+that has the following design goals:</p>
 
 <ul class="bullets">
     <li>independence of data, logic &amp; presentation layers</li>
@@ -28,7 +32,9 @@
     <li>quality end user docs</li>
 </ul>
 
-<p>Seagull works 'out of the box' and is simple to install and configure, please follow the instructions in INSTALL.txt. Developer info is availabe in the <a href="http://seagull.phpkitchen.com/docs" title="Project docs">project docs</a>.</p>
+<p>Seagull works 'out of the box' and is simple to install and configure, please follow the
+instructions in INSTALL.txt. Developer info is availabe in
+the <a href="http://trac.seagullproject.org" title="Project docs">project docs</a>.</p>
 
 <p>There are some default modules that come with the framework, these handle tasks related to:</p>
 
